tdf#86019: Use ChartDataRowSource_COLUMNS as the chart...

...data row source if there is atleast a sequence along a
column.

Change-Id: I24838a704d31f83fa51efa2eb44b489affe86f35